--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "react-wrap-balancer": "^1.1.0",
     "tailwind-cn": "^1.0.2",
     "tailwind-merge": "^1.14.0"
   },
